nfs-server test

--- a/Ansible/roles/nfs-server/tasks/main.yml
+++ b/Ansible/roles/nfs-server/tasks/main.yml
@@ -1,2 +1,27 @@
 ---
-# tasks file for nfs-server
+
+- name: Install NFS server package
+  package:
+    name: nfs-utils
+    state: present
+
+- name: Ensure NFS service is enabled and running
+  service:
+    name: nfs
+    state: started
+    enabled: yes
+
+- name: Create export directory
+  file:
+    path: "{{ nfs_export_directory }}"
+    state: directory
+    mode: '0755'
+
+- name: Add NFS export entry to /etc/exports
+  lineinfile:
+    path: /etc/exports
+    line: "{{ nfs_export_directory }} {{ nfs_export_options }}"
+    create: yes
+
+- name: Reload NFS server configuration
+  command: exportfs -ra
