--- a/Ansible/roles/nfs-server/defaults/main.yml
+++ b/Ansible/roles/nfs-server/defaults/main.yml
@@ -1,3 +1,3 @@
 ---
-nfs_export_directory: /path/to/your/export/directory
+nfs_export_directory: /exports/repo
 nfs_export_options: "*(rw,sync,no_root_squash,no_all_squash)"
