nfs-service name changed

--- a/Ansible/roles/nfs-server/tasks/main.yml
+++ b/Ansible/roles/nfs-server/tasks/main.yml
@@ -7,7 +7,7 @@
 
 - name: Ensure NFS service is enabled and running
   service:
-    name: nfs
+    name: nfs-server
     state: started
     enabled: yes
 
