--- a/Ansible/inventories/inventory.ini
+++ b/Ansible/inventories/inventory.ini
@@ -1,8 +1,10 @@
 [grp-control-plane]
-localhost
+127.0.0.1
+# localhost
 # control-plane
 
 [grp-nodes]
-localhost
+127.0.0.1
+# localhost
 # node1
 # node2
