end of the test

--- a/Ansible/group_vars/grp_control_plane.yml
+++ b/Ansible/group_vars/grp_control_plane.yml
@@ -1,4 +1,4 @@
 ---
 
-# nfs_export_directory: /exports/repo
-# nfs_export_options: "*(rw,sync,no_root_squash,no_all_squash)"
+nfs_export_directory: /exports/repo
+nfs_export_options: "*(rw,sync,no_root_squash,no_all_squash)"
