--- a/Ansible/group_vars/grp_control_plane.yml
+++ b/Ansible/group_vars/grp_control_plane.yml
@@ -1,4 +1,9 @@
 ---
+### Repos ###
+repos_mount_point: "/exports/repos"
+## Path /dev/sr0 is always the same because of the cloud-init
+repos_device_path: "/dev/sr0"
 
-nfs_export_directory: /exports/repo
-nfs_export_options: "*(rw,sync,no_root_squash,no_all_squash)"
+# NFS
+nfs_repos_export_directory: "{{ repos_mount_point }}"
+nfs_repos_export_options: "*(rw,sync,no_root_squash,no_all_squash)"
