--- a/Ansible/roles/control_plane/tasks/main.yml
+++ b/Ansible/roles/control_plane/tasks/main.yml
@@ -1,1 +1,16 @@
 ---
+- name: Mount repos ISO
+  tasks:
+    - name: Ensure mount point exists
+      file:
+        path: "{{ repos_mount_point }}"
+        state: directory
+        mode: '0755'
+
+    - name: Mount the optical drive
+      mount:
+        path: "{{ repos_mount_point }}"
+        src: "{{ repos_device_path }}"
+        fstype: iso9660
+        opts: "ro"
+        state: mounted
