--- a/Ansible/roles/nfs_client/defaults/main.yml
+++ b/Ansible/roles/nfs_client/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
 # defaults file for nfs-client
 nfs_server: control-plane
-nfs_export_path: /exports/repo
-nfs_mount_point: /mnt/repo
+nfs_repos_export_path: /exports/repo
+nfs_repos_mount_point: /mnt/repo
