--- a/Ansible/roles/control_plane/tasks/main.yml
+++ b/Ansible/roles/control_plane/tasks/main.yml
@@ -5,6 +5,18 @@
     state: directory
     mode: '0755'
 
+vars:
+  ihopefalse: "{{ '/etc/hosts' is mount }}"
+  normallytrue: "{{ '/tmp' is mount }}"
+
+- name: ihopefalse 
+  debug: 
+    var: ihopefalse
+
+- name: normallytrue
+  debug: 
+    var: normallytrue
+
 - name: Mount the optical drive
   mount:
     path: "{{ repos_mount_point }}"
