--- a/Ansible/roles/control_plane/tasks/main.yml
+++ b/Ansible/roles/control_plane/tasks/main.yml
@@ -14,4 +14,4 @@ block:
       opts: "ro"
       state: mounted
       boot: true
-  when: not "{{ repos_mount_point is mount }}" 
+  when: repos_mount_point is not mount" 
