--- a/Ansible/group_vars/grp_control_plane.yml
+++ b/Ansible/group_vars/grp_control_plane.yml
@@ -4,6 +4,11 @@ repos_mount_point: "/exports/repos"
 ## Path /dev/sr0 is always the same because of the cloud-init
 repos_device_path: "/dev/sr0"
 
-# NFS
+### Required packages 
+required_packages:
+  - "python3.11"
+  - "kubectl1.28.3"
+
+### NFS
 nfs_repos_export_directory: "{{ repos_mount_point }}"
 nfs_repos_export_options: "*(rw,sync,no_root_squash,no_all_squash)"
