--- a/Ansible/group_vars/grp_control_plane.yml
+++ b/Ansible/group_vars/grp_control_plane.yml
@@ -4,11 +4,23 @@ repos_mount_point: "/exports/repos"
 ## Path /dev/sr0 is always the same because of the cloud-init
 repos_device_path: "/dev/sr0"
 
-### Required packages 
-required_packages:
-  - "python3.11"
-  - "kubectl1.28.2"
-
 ### NFS
 nfs_repos_export_directory: "{{ repos_mount_point }}"
 nfs_repos_export_options: "*(rw,sync,no_root_squash,no_all_squash)"
+
+# Repos to be enabled 
+repos_to_enable: 
+  - AppStream
+  - BaseOS
+  - Kubernetes
+
+# Required packages 
+required_packages:
+  - "python3.11"
+  - "kubectl"
+  - "kubelet"
+  - "kubeadm"
+
+# Services required to be enabled on boot
+required_services:
+  - "kubelet"
