--- a/Terraform/modules/control_plane/user-data.cfg
+++ b/Terraform/modules/control_plane/user-data.cfg
@@ -14,15 +14,21 @@ chpasswd:
     ans_mariusz:mypassword
   expire: False
 runcmd:
-  # Connection settings 
+  ### Network
   - nmcli connection add con-name "DefaultCon" ifname eth0 type ethernet ip4 192.168.2.10/24 gw4 192.168.2.1 ipv4.dns "8.8.8.8 8.8.4.4"
   - nmcli connection down "DefaultCon"
   - nmcli connection up "DefaultCon"
-  # Ansible
-  - ansible-galaxy collection install community.general
-  - ansible-galaxy collection install ansible.posix
-  # Random stuff 
-  - echo MOTD control_plane >> /etc/motd
-  # Repos
+  ### Meta data
+  - mkdir /mnt/meta
+  - mount -t iso9660 -o loop /dev/sr1 /mnt/meta
+  ### Repos
   - mkdir /mnt/repos
   - mount -t iso9660 -o loop /dev/sr0 /mnt/repos
+  # Copy all the repos configuration files to the yum.repos.d
+  - cp /mnt/meta/repo_files/* /etc/yum.repos.d/
+  ### Git
+  # - git clone https://mariuszkuswik/p2-inz-project /home/ans_mariusz/
+  ### Ansible
+  # Ansible collection installation
+  # - sudo -u ans_mariusz ansible-galaxy collection install community.general
+  # - sudo -u ansible-galaxy collection install ansible.posix
