ansible as iso mounted

--- a/Terraform/modules/control_plane/user-data.cfg
+++ b/Terraform/modules/control_plane/user-data.cfg
@@ -21,13 +21,14 @@ runcmd:
   ### Meta data
   - mkdir /mnt/meta
   - mount -t iso9660 -o loop /dev/sr1 /mnt/meta
+  ### Ansible 
+  - mkdir /mnt/ansible
+  - mount -t iso9660 -o loop /dev/sr2 /mnt/ansible
   ### Repos
   - mkdir /mnt/repos
   - mount -t iso9660 -o loop /dev/sr0 /mnt/repos
   # Copy all the repos configuration files to the yum.repos.d
   - cp /mnt/meta/repo_files/* /etc/yum.repos.d/
-  ### Git
-  # - git clone https://mariuszkuswik/p2-inz-project /home/ans_mariusz/
   ### Ansible
   # Ansible collection installation
   # - sudo -u ans_mariusz ansible-galaxy collection install community.general
