ssh password connection

--- a/Terraform/modules/control_plane/user-data.cfg
+++ b/Terraform/modules/control_plane/user-data.cfg
@@ -28,8 +28,10 @@ runcmd:
   - mkdir /mnt/repos
   - mount -t iso9660 -o loop /dev/sr0 /mnt/repos
   # Copy all the repos configuration files to the yum.repos.d
-  - cp /mnt/meta/repo_files/* /etc/yum.repos.d/
+  - /usr/bin/cp /mnt/meta/repo_files/* /etc/yum.repos.d/
   ### Ansible
   # Ansible collection installation
+  - /usr/bin/sed -i "s/PasswordAuthentication no/PasswordAuthentication yes/g" /etc/ssh/sshd_config
+  - /usr/bin/systemctl restart sshd
   # - sudo -u ans_mariusz ansible-galaxy collection install community.general
   # - sudo -u ansible-galaxy collection install ansible.posix
