--- a/Ansible/group_vars/grp_control_plane.yml
+++ b/Ansible/group_vars/grp_control_plane.yml
@@ -27,6 +27,7 @@ required_packages:
   - "kubeadm"
   - "docker"
   - "bash-completion"
+  - "containerd.io"
 
 # Services required to be enabled on boot
 required_services:
