--- a/Ansible/roles/common/tasks/main.yml
+++ b/Ansible/roles/common/tasks/main.yml
@@ -1,8 +1,7 @@
 ---
 #### Ansible Roles
 - name: Install Ansible roles
-  command:
-    command: ansible-galaxy collection install "{{ item }}"
+  command: ansible-galaxy collection install "{{ item }}"
   loop: "{{ roles_to_install }}"
 
 #### REPOS ####
@@ -25,7 +24,7 @@
 
 - name: Copy repository configuration files
   copy: 
-    src: files/{{ item }}.repo
+    src: "{{ repo_files_source }}/{{ item }}.repo"
     dest: /etc/yum.repos.d/{{ item }}.repo
   loop: "{{ repos_to_enable }}"
 
