--- a/Ansible/roles/control_plane/tasks/main.yml
+++ b/Ansible/roles/control_plane/tasks/main.yml
@@ -20,6 +20,13 @@
   - "echo \"net.bridge.bridge-nf-call-iptables = 1\" | tee /etc/sysctl.d/99-kubernetes-cri.conf"
   - "sysctl --system"
 
+- name: Rozwiazanie problemu ERROR FileContent--proc-sys-net-ipv4-ip_forward
+  command: "{{ item }}"
+  with_items: 
+  - "sysctl -w net.ipv4.ip_forward=1"
+  - "echo 'net.ipv4.ip_forward = 1' | sudo tee /etc/sysctl.d/99-kubernetes-cri.conf"
+  - "sudo sysctl --system"
+
 - name: Inicjalizacja klastra
   command: kubeadm init --pod-network-cidr=10.244.0.0/16
   args:
