tests - user-config+ansible node config

--- a/Terraform/modules/control_plane/user-data.cfg
+++ b/Terraform/modules/control_plane/user-data.cfg
@@ -1,4 +1,5 @@
 #cloud-config
+hostname: control-plane
 users:
   - cloud-user
   - name: ans_mariusz
@@ -29,9 +30,9 @@ runcmd:
   - mount -t iso9660 -o loop /dev/sr0 /mnt/repos
   # Copy all the repos configuration files to the yum.repos.d
   - /usr/bin/cp /mnt/meta/repo_files/* /etc/yum.repos.d/
-  ### Ansible
-  # Ansible collection installation
+  ### SSH 
   - /usr/bin/sed -i "s/PasswordAuthentication no/PasswordAuthentication yes/g" /etc/ssh/sshd_config
   - /usr/bin/systemctl restart sshd
-  # - sudo -u ans_mariusz ansible-galaxy collection install community.general
-  # - sudo -u ansible-galaxy collection install ansible.posix
+  ### Packages 
+  - yum install avahi avahi-tools nss-mdns
+  - systemctl enable --now avahi-daemon
