--- a/Terraform/modules/control_plane/user-data.cfg
+++ b/Terraform/modules/control_plane/user-data.cfg
@@ -16,9 +16,10 @@ chpasswd:
   expire: False
 runcmd:
   ### Network
-  - nmcli connection add con-name "DefaultCon" ifname eth0 type ethernet ip4 192.168.2.10/24 gw4 192.168.2.1 ipv4.dns "8.8.8.8 8.8.4.4"
-  - nmcli connection down "DefaultCon"
-  - nmcli connection up "DefaultCon"
+  - nmcli connection modify "System eth0" ipv4.method manual ipv4.address 192.168.2.10/24 ipv4.gateway 192.168.2.1 ipv4.dns "8.8.8.8 8.8.4.4"
+  # - nmcli connection modify con-name "System eth0" ifname eth0 type ethernet ip4 192.168.2.10/24 gw4 192.168.2.1 ipv4.dns "8.8.8.8 8.8.4.4"
+  - nmcli connection down "System eth0"
+  - nmcli connection up "System eth0"
   ### Meta data
   - mkdir /mnt/meta
   - mount -t iso9660 -o loop /dev/sr1 /mnt/meta
@@ -33,6 +34,4 @@ runcmd:
   ### SSH 
   - /usr/bin/sed -i "s/PasswordAuthentication no/PasswordAuthentication yes/g" /etc/ssh/sshd_config
   - /usr/bin/systemctl restart sshd
-  ### Packages 
-  - yum install avahi avahi-tools nss-mdns
-  - systemctl enable --now avahi-daemon
+
