cloud-init fstab added

--- a/Terraform/modules/control_plane/user-data.cfg
+++ b/Terraform/modules/control_plane/user-data.cfg
@@ -16,19 +16,19 @@ chpasswd:
   expire: False
 runcmd:
   ### Network
-  - nmcli connection modify "System eth0" ipv4.method manual ipv4.address 192.168.2.10/24 ipv4.gateway 192.168.2.1 ipv4.dns "8.8.8.8 8.8.4.4"
-  # - nmcli connection modify con-name "System eth0" ifname eth0 type ethernet ip4 192.168.2.10/24 gw4 192.168.2.1 ipv4.dns "8.8.8.8 8.8.4.4"
-  - nmcli connection down "System eth0"
-  - nmcli connection up "System eth0"
-  ### Meta data
-  - mkdir /mnt/meta
-  - mount -t iso9660 -o loop /dev/sr1 /mnt/meta
-  ### Ansible 
-  - mkdir /mnt/ansible
-  - mount -t iso9660 -o loop /dev/sr2 /mnt/ansible
+  - /usr/bin/nmcli connection modify "System eth0" ipv4.method manual ipv4.address 192.168.2.10/24 ipv4.gateway 192.168.2.1 ipv4.dns "8.8.8.8 8.8.4.4"
+  - /usr/bin/nmcli connection down "System eth0"
+  - /usr/bin/nmcli connection up "System eth0"
+  ### Mounts
+  ## Dirs
+  - /usr/bin/mkdir /mnt/meta
+  - /usr/bin/mkdir /mnt/ansible
+  - /usr/bin/mkdir /mnt/repos
+  ## Fstab
+  - /usr/bin/echo "/dev/sr0 /mnt/repos iso9660 loop 0 0" >> /etc/fstab
+  - /usr/bin/echo "/dev/sr1 /mnt/meta iso9660 loop 0 0" >> /etc/fstab
+  - /usr/bin/echo "/dev/sr2 /mnt/ansible iso9660 loop 0 0" >> /etc/fstab
   ### Repos
-  - mkdir /mnt/repos
-  - mount -t iso9660 -o loop /dev/sr0 /mnt/repos
   # Copy all the repos configuration files to the yum.repos.d
   - /usr/bin/cp /mnt/meta/repo_files/* /etc/yum.repos.d/
   ### SSH 
