cosmetic changes in modules

--- a/Terraform/modules/node/user-data.cfg
+++ b/Terraform/modules/node/user-data.cfg
@@ -15,15 +15,15 @@ chpasswd:
     ans_mariusz:mypassword
   expire: False
 runcmd:
-  ### Meta data
-  - mkdir /mnt/meta
-  - mount -t iso9660 -o loop /dev/sr1 /mnt/meta
-  ### Ansible 
-  - mkdir /mnt/ansible
-  - mount -t iso9660 -o loop /dev/sr2 /mnt/ansible
-  ### Repos
-  - mkdir /mnt/repos
-  - mount -t iso9660 -o loop /dev/sr0 /mnt/repos
+  ### Mounts
+  ## Dirs
+  - /usr/bin/mkdir /mnt/meta
+  - /usr/bin/mkdir /mnt/ansible
+  - /usr/bin/mkdir /mnt/repos
+  ## Fstab
+  - /usr/bin/echo "/dev/sr0 /mnt/repos iso9660 loop 0 0" >> /etc/fstab
+  - /usr/bin/echo "/dev/sr1 /mnt/meta iso9660 loop 0 0" >> /etc/fstab
+  - /usr/bin/echo "/dev/sr2 /mnt/ansible iso9660 loop 0 0" >> /etc/fstab
   # Copy all the repos configuration files to the yum.repos.d
   - /usr/bin/cp /mnt/meta/repo_files/* /etc/yum.repos.d/
   ### SSH
