temp mount added

--- a/Terraform/modules/control_plane/user-data.cfg
+++ b/Terraform/modules/control_plane/user-data.cfg
@@ -28,6 +28,8 @@ runcmd:
   - /usr/bin/echo "/dev/sr0 /mnt/repos iso9660 loop 0 0" >> /etc/fstab
   - /usr/bin/echo "/dev/sr1 /mnt/meta iso9660 loop 0 0" >> /etc/fstab
   - /usr/bin/echo "/dev/sr2 /mnt/ansible iso9660 loop 0 0" >> /etc/fstab
+  ## Temp mount
+  - /usr/bin/mount -a
   ### Repos
   # Copy all the repos configuration files to the yum.repos.d
   - /usr/bin/cp /mnt/meta/repo_files/* /etc/yum.repos.d/
