--- a/Terraform/modules/node/user-data.cfg
+++ b/Terraform/modules/node/user-data.cfg
@@ -1,7 +1,6 @@
 #cloud-config
 hostname: node$INSTANCE_ID
 users:
-  - cloud-user
   - name: ans_mariusz
     sudo: ["ALL=(ALL) NOPASSWD:ALL"]
     groups: wheel,adm,systemd-journal
@@ -11,21 +10,20 @@ users:
 chpasswd:
   list: |
     root:password
-    cloud-user:mypassword
     ans_mariusz:mypassword
   expire: False
 runcmd:
   ### Mounts
   ## Dirs
-  - /usr/bin/mkdir /mnt/meta
-  - /usr/bin/mkdir /mnt/ansible
-  - /usr/bin/mkdir /mnt/repos
-  ## Fstab
-  - /usr/bin/echo "/dev/sr0 /mnt/repos iso9660 loop 0 0" >> /etc/fstab
-  - /usr/bin/echo "/dev/sr1 /mnt/meta iso9660 loop 0 0" >> /etc/fstab
-  - /usr/bin/echo "/dev/sr2 /mnt/ansible iso9660 loop 0 0" >> /etc/fstab
+  # - /usr/bin/mkdir /mnt/meta
+  # - /usr/bin/mkdir /mnt/ansible
+  # - /usr/bin/mkdir /mnt/repos
+  # ## Fstab
+  # - /usr/bin/echo "/dev/sr0 /mnt/repos iso9660 loop 0 0" >> /etc/fstab
+  # - /usr/bin/echo "/dev/sr1 /mnt/meta iso9660 loop 0 0" >> /etc/fstab
+  # - /usr/bin/echo "/dev/sr2 /mnt/ansible iso9660 loop 0 0" >> /etc/fstab
   # Copy all the repos configuration files to the yum.repos.d
-  - /usr/bin/cp /mnt/meta/repo_files/* /etc/yum.repos.d/
+  # - /usr/bin/cp /mnt/meta/repo_files/* /etc/yum.repos.d/
   ### SSH
   - /usr/bin/sed -i "s/PasswordAuthentication no/PasswordAuthentication yes/g" /etc/ssh/sshd_config
   - /usr/bin/systemctl restart sshd
