default pass and some other changes

--- a/Ansible/group_vars/all.yml
+++ b/Ansible/group_vars/all.yml
@@ -1,4 +1,8 @@
 ---
+ansible_connection: ssh
+ansible_user: ans_mariusz 
+ansible_ssh_pass: mypassword 
+
 repo_files_source: "/mnt/meta/repo_files"
 
 ### Main 
