--- a/Ansible/inventory.ini
+++ b/Ansible/inventory.ini
@@ -1,7 +1,7 @@
 [grp_control_plane]
-localhost
+control_plane=192.168.2.10
 
 [grp_nodes]
-localhost
-# node1
-# node2
+node1=192.168.2.101
+# node2=192.168.2.102
+# node3=192.168.2.103
