--- a/Terraform/modules/control_plane/user-data.cfg
+++ b/Terraform/modules/control_plane/user-data.cfg
@@ -19,6 +19,7 @@ runcmd:
   - /usr/bin/nmcli connection modify "System eth0" ipv4.method manual ipv4.address 192.168.2.10/24 ipv4.gateway 192.168.2.1 ipv4.dns "8.8.8.8 8.8.4.4"
   - /usr/bin/nmcli connection down "System eth0"
   - /usr/bin/nmcli connection up "System eth0"
+  ### 
   ### Mounts
   ## Dirs
   - /usr/bin/mkdir /mnt/meta
@@ -36,4 +37,9 @@ runcmd:
   ### SSH 
   - /usr/bin/sed -i "s/PasswordAuthentication no/PasswordAuthentication yes/g" /etc/ssh/sshd_config
   - /usr/bin/systemctl restart sshd
-
+  ### Ansible 
+  # Ansible-galaxy 
+  - ansible-galaxy collection install community.general -p /home/ans_mariusz/.ansible/collections
+  - ansible-galaxy collection install ansible.posix -p /home/ans_mariusz/.ansible/collections
+  # Ansible-playbook 
+  - ansible-playbook /mnt/ansible/main.yml -u ans_mariusz
