--- a/Ansible/roles/common/tasks/main.yml
+++ b/Ansible/roles/common/tasks/main.yml
@@ -3,14 +3,14 @@
 - name: Install Ansible roles
   command: ansible-galaxy collection install "{{ item }}"
   loop: "{{ roles_to_install }}"
+  when: roles_to_install is defined
 
 #### REPOS ####
 - name: Ensure mount point exists
   file:
     path: "{{ repos_mount_point }}"
     state: directory
-    mode: '0755'
-  # when: "repos_mount_point is not defined"  # Fix the condition
+  when: "repos_mount_point is not defined"  # Fix the condition
 
 - name: Mount the optical drive
   mount:
