--- a/Terraform/modules/control_plane/user-data.cfg
+++ b/Terraform/modules/control_plane/user-data.cfg
@@ -39,7 +39,7 @@ runcmd:
   - /usr/bin/systemctl restart sshd
   ### Ansible 
   # Ansible-galaxy 
-  - ansible-galaxy collection install community.general -p /home/ans_mariusz/.ansible/collections
-  - ansible-galaxy collection install ansible.posix -p /home/ans_mariusz/.ansible/collections
+  # - ansible-galaxy collection install community.general -p /home/ans_mariusz/.ansible/collections
+  # - ansible-galaxy collection install ansible.posix -p /home/ans_mariusz/.ansible/collections
   # Ansible-playbook 
   - ansible-playbook /mnt/ansible/main.yml -u ans_mariusz
