--- a/Ansible/group_vars/grp_nodes.yml
+++ b/Ansible/group_vars/grp_nodes.yml
@@ -1,4 +1,4 @@
 ---
 nfs_server: "{{ control_plane }}" 
-nfs_repos_export_path: /exports/repos
+nfs_repos_export_path: /mnt/repos
 nfs_repos_mount_point: /mnt/repos
