--- a/Ansible/roles/nfs_client/tasks/main.yml
+++ b/Ansible/roles/nfs_client/tasks/main.yml
@@ -18,7 +18,7 @@
     fstype: nfs
     opts: "rw,soft,intr"
     state: mounted
-  when: not path_exists.stat(nfs_repos_mount_point)
+  when: not (ansible.builtin.stat(path=nfs_repos_mount_point).exists)
 
 - name: Add entry to /etc/fstab
   lineinfile:
