--- a/Terraform/modules/control_plane/user-data.cfg
+++ b/Terraform/modules/control_plane/user-data.cfg
@@ -42,4 +42,4 @@ runcmd:
   - ansible-galaxy collection install community.general -p /home/ans_mariusz/.ansible/collections
   - ansible-galaxy collection install ansible.posix -p /home/ans_mariusz/.ansible/collections
   # Ansible-playbook 
-  - ansible-playbook /mnt/ansible/main.yml -u ans_mariusz
+  # - ansible-playbook /mnt/ansible/main.yml -u ans_mariusz
