--- a/Ansible/group_vars/grp_control_plane.yml
+++ b/Ansible/group_vars/grp_control_plane.yml
@@ -1,20 +1,21 @@
 ---
 ### Local iso mounts ###
 local_iso_mounts: 
-  - repos_mount_point: "/mnt/repos"
-  - meta_mount_point: "/mnt/meta"
-  - ansible_mount_point: "/mnt/ansible"
+  - "/mnt/repos" # repos mount point
+  - "/mnt/meta" # meta mount point
+  - "/mnt/ansible" # ansible mount point
+
 
 ## Path /dev/sr0 is always the same because of the cloud-init
 local_iso_device_paths: 
-  - repos_device_path: "/dev/sr0"
-  - meta_mount_point: "/dev/sr1"
-  - ansible_mount_point: "/dev/sr2"
+  - "/dev/sr0" # repos_device_path
+  - "/dev/sr1" # meta_mount_point
+  - "/dev/sr2" # ansible_mount_point
 
 ### NFS
-nfs_export_dirs: 
-  - nfs_repos_export_directory: "{{ repos_mount_point }}"
-  - nfs_meta_export_directory: "{{ meta_mount_point }}"
+# nfs_export_dirs: 
+  # - "{{ repos_mount_point }}" # nfs_repos_export_directory
+  # - "{{ meta_mount_point }}" # nfs_meta_export_directory
 
 nfs_export_options: "*(rw,sync,no_root_squash,no_all_squash)"
 
