nfs client test2

--- a/Ansible/roles/nfs_client/tasks/main.yml
+++ b/Ansible/roles/nfs_client/tasks/main.yml
@@ -9,7 +9,7 @@
     path: "{{ nfs_repos_mount_point }}"
     state: directory
     mode: '0755'
-  when: "nfs_repos_mount_point is not mount"
+  # when: "nfs_repos_mount_point is not mount"
 
 - name: Mount NFS share
   ansible.posix.mount:
