nfs client mount points

--- a/Ansible/roles/nfs_client/tasks/main.yml
+++ b/Ansible/roles/nfs_client/tasks/main.yml
@@ -6,9 +6,10 @@
 
 - name: Ensure NFS mount point exists
   file:
-    path: "{{ nfs_repos_mount_point }}"
+    path: "{{ item }}"
     state: directory
     mode: '0755'
+  loop: "{{ local_nfs_mount_paths }}"
   # when: "nfs_repos_mount_point is not mount"
 
 - name: Mount NFS share
