--- a/Ansible/group_vars/all.yml
+++ b/Ansible/group_vars/all.yml
@@ -4,9 +4,22 @@ ansible_user: ans_mariusz
 ansible_ssh_pass: mypassword 
 ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
 
-
 repo_files_source: "/mnt/meta/repo_files"
 
 ### Main 
 main_user: ans_mariusz
 control_plane: 192.168.2.10
+
+# CONTROL-PLANE Global settings!
+### Local iso mounts ###
+local_iso_mounts: 
+  - "/mnt/repos"    # repos mount point
+  - "/mnt/meta"     # meta mount point
+  - "/mnt/ansible"  # ansible mount point
+
+
+## Path /dev/sr0 is always the same because of the cloud-init
+local_iso_device_paths: 
+  - "/dev/sr0" # repos device path
+  - "/dev/sr1" # meta mount point
+  - "/dev/sr2" # ansible mount point
