--- a/Ansible/group_vars/grp_control_plane.yml
+++ b/Ansible/group_vars/grp_control_plane.yml
@@ -1,6 +1,18 @@
 ---
 nfs_export_options: "*(rw,sync,no_root_squash,no_all_squash)"
 
+### Local iso mounts ###
+local_iso_mounts: 
+  - "/mnt/repos"    # repos mount point
+  - "/mnt/meta"     # meta mount point
+  - "/mnt/ansible"  # ansible mount point
+
+## Path /dev/sr0 is always the same because of the cloud-init
+local_iso_device_paths: 
+  - "/dev/sr0" # repos device path
+  - "/dev/sr1" # meta mount point
+  - "/dev/sr2" # ansible mount point
+
 # Repos to be enabled 
 repos_to_enable: 
   - AppStream
