--- a/Ansible/group_vars/grp_nodes.yml
+++ b/Ansible/group_vars/grp_nodes.yml
@@ -5,7 +5,7 @@ nfs_server: "{{ control_plane }}"
 nfs_export_paths: "{{ nfs_export_dirs }}"
 
 # Destination paths for the nfs clients
-local_nfs_mount_paths: "{{ local_iso_mounts }}"
+local_nfs_mount_paths: "{{ nfs_export_dirs }}"
 
 # Options on how to mount nfs shares
 local_nfs_mount_options: "ro"
