--- a/Ansible/roles/node/tasks/main.yml
+++ b/Ansible/roles/node/tasks/main.yml
@@ -1,2 +1,7 @@
 ---
 
+- name: Execute join command
+  command: "/exports/control-plane/kube_join_command.sh"
+  args:
+    creates: "/etc/kubernetes/kubelet.conf"
+  ignore_errors: true
