--- a/Ansible/group_vars/grp_nodes.yml
+++ b/Ansible/group_vars/grp_nodes.yml
@@ -16,3 +16,7 @@ repos_to_enable:
   - BaseOS
   - Kubernetes
   - docker-ce
+
+### DODAC INSTALACJE KOMENDY KUBEADM
+required_packages:
+  - kubeadm
